Beskriver projektet "inköpslistan".

* 2016-03-06 18:31
    - Lite buggutskrifter som hjälpte mig att få listan att funka på nginx, låter
        de vara kvar.

* 2015-06-21 15:13
	- Använder nu ws://listan.axellarsson.nu istället för ws://axellarsson.nu vilket bör ge mer konsekvent beteende.
	
* 2014-12-27 16:13
    - Att ta bort den sista posten implicerar nu ett anrop av "shoppinglistSocket.clear()" -> detta borde reducera problemet
    med itemIdXX > itemId99 drastiskt.
    
* 2014-12-11 21:20
    - använder nu inte http://list.axellarsson.nu utan /mobile_index.php så att det spelar inte någon roll var listan
    ligger den kommer ändå att fungera för mobiler. Givetvis måste dock ws://axellarsson.nu:9001 fortfarande var hådkodat.

* 2014-11-27 18:26
    - använder nu http://listan.axellarsson.nu och ws://axellarsson.nu:9001

* 2014-08-09 18:28
    - refaktoriserat namnen på teman, ie "Nytt tema" -> Minimalism
    - lagt till ett nytt tema "Sa Barce de Formentera" (baseras på Minimalism)

* 2014-05-31 16:25
    - fixat bugg att updateItem inte fungerade korrekt med isMarked
    - refaktoriserat namn, från gui/oldGui till shoppinglist respektive legacyShoppinglist, även bytt motsvarande filnamn
    
* 2014-05-29 16:11
    - fixade bugg att Safari inte visade Roboto
    - fixade bugg att Firefox på min MacBook visade Roboto Thin Italic istället för
        bara Roboto Thin (den valde automatiskt den installerade Roboto Thin Italic, men  nu har jag också installerat Roboto Thin)
        
* 2014-05-29 15:41
    - fixat att man inte kunde få updateItem att fungera korrekt när man ändrade på mobil, då upptäcktes inte uppdatering av andra mobilklienter
    - fixat 300 ms delay gone away så nu är mobilsidan snabbare än någonsin
    
* 2014-05-29 15:03
    - fixat inloggningen igen iom uppgraderingen av PHP
    - alla mysql-queries är nu uppdaterade till PDO
    - ändrat på localOnly till att endast vara en CSS-klass -> blir mycket lättare
    
* 2014-05-09 18:47