@@ -18,7 +18,7 @@
 <html>
 	<head>
 		<!-- Logo -->
-		<LINK REL="SHORTCUT ICON" HREF="/assets/images/animated_favicon1.gif" />
+		<LINK REL="SHORTCUT ICON" HREF="/assets/images/icons/web_hi_res_512.png" />
 		
 		<meta charset="UTF-8" />
 	
